# remarkable-pdf-converter

./: README.md  pyproject.toml  r2pdf.sh
src/r2pdf/: cli.py  converter.py
