[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r2pdf"
version = "0.1.0"
description = "Convert EPUB files to dark-mode, double-spaced PDFs for Remarkable Paper Pro"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
    "weasyprint",
]

[project.scripts]
r2pdf = "r2pdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
